Bug #4187 Font size of Post message is too small

--- a/frontend/web/less/desktop/post.less
+++ b/frontend/web/less/desktop/post.less
@@ -386,7 +386,7 @@
                         }
                     }
                     .post_massage{
-                        font-size: 11px;
+                        font-size: 12px;
                         margin: 0px;
                         // overflow: hidden;
                         // text-overflow: ellipsis;
